tests/spec/emit/snapshots/partial_impl_repeated_return_only_type_args.snap
---
source: tests/spec/emit/types.rs
description: "\nstruct Pair<A, B> { a: A, b: B }\n\nimpl<T> Pair<T, T> {\n  fn make<U>(self) -> U { panic(\"boom\") }\n}\n\nfn test() {\n  let p = Pair { a: 1, b: 2 };\n  let x: string = p.make();\n  let _ = x;\n}\n"
---
package main

type Pair[A any, B any] struct {
	a A
	b B
}

func Pair_make[T any, U any](_ Pair[T, T]) U {
	panic("boom")
}

func test() {
	p := Pair[int, int]{
		a: 1,
		b: 2,
	}
	x := Pair_make[int, string](p)
	_ = x
}
