tests/spec/emit/snapshots/partial_is_ok.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  fn test(p: Partial<int, string>) -> bool {
    p.is_ok()
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(p lisette.Partial[int, string]) bool {
	return p.IsOk()
}
