tests/spec/emit/snapshots/partial_map.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  fn test(p: Partial<int, string>) -> Partial<int, string> {
    p.map(|n| n * 2)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(p lisette.Partial[int, string]) lisette.Partial[int, string] {
	return lisette.PartialMap(p, func(n int) int {
		return n * 2
	})
}
