tests/spec/emit/snapshots/partial_match_aliases_the_both_arm_names.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn write_all(file: Ref<os.File>) {
    match file.Write(['h', 'i']) {
      Ok(n) => fmt.Println(n),
      Both(m, e) => fmt.Println(m, e),
      Err(e) => fmt.Println(e),
    }
  }
---
package main

import (
	"fmt"
	"os"
)

func writeAll(file *os.File) {
	if n, e := file.Write([]byte{'h', 'i'}); e == nil {
		fmt.Println(n)
	} else {
		fmt.Println(n, e)
	}
}
