tests/spec/emit/snapshots/partial_match_all_variants.snap
---
source: tests/spec/emit/partial.rs
description: "input: \nfn test(p: Partial<int, string>) -> int {\n  match p {\n    Partial.Ok(n) => n,\n    Partial.Err(_) => 0,\n    Partial.Both(n, _) => n,\n  }\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(p lisette.Partial[int, string]) int {
	switch p.Tag {
	case lisette.PartialOk:
		return p.OkVal
	case lisette.PartialErr:
		return 0
	default:
		return p.OkVal
	}
}
