tests/spec/emit/snapshots/partial_match_both_field_access.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  fn test(p: Partial<int, string>) -> string {
    match p {
      Partial.Ok(_) => "ok",
      Partial.Err(e) => e,
      Partial.Both(_, e) => e,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(p lisette.Partial[int, string]) string {
	switch p.Tag {
	case lisette.PartialOk:
		return "ok"
	case lisette.PartialErr:
		return p.ErrVal
	default:
		return p.ErrVal
	}
}
