tests/spec/emit/snapshots/partial_ok_construction.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  fn test() -> Partial<int, string> {
    Partial.Ok(42)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Partial[int, string] {
	return lisette.MakePartialOk[int, string](42)
}
